@@ -8,7 +8,7 @@
 package org.dspace.content.authority;
 
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
@@ -72,12 +72,10 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
     protected static String idAttribute = "id";
     protected static String labelAttribute = "label";
     protected static String[] pluginNames = null;
-    public static final String ID_SPLITTER = ":";
     protected String vocabularyName = null;
     protected InputSource vocabulary = null;
     protected Boolean suggestHierarchy = false;
     protected Boolean storeHierarchy = true;
-    protected boolean storeAuthority = false;
     protected String hierarchyDelimiter = "::";
     protected Integer preloadLevel = 1;
     protected String valueAttribute = labelAttribute;
@@ -89,8 +87,9 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
 
     @Override
     public boolean storeAuthorityInMetadata() {
-        init(null);
-        return storeAuthority;
+        // For backward compatibility controlled vocabularies don't store the node id in
+        // the metadatavalue
+        return false;
     }
 
     public static String[] getPluginNames() {
@@ -133,9 +132,6 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
                 File.separator + "controlled-vocabularies" + File.separator;
             String configurationPrefix = "vocabulary.plugin." + vocabularyName;
             storeHierarchy = config.getBooleanProperty(configurationPrefix + ".hierarchy.store", storeHierarchy);
-            storeAuthority = config.getBooleanProperty(configurationPrefix + ".authority.store",
-                                                       config.getBooleanProperty("vocabulary.plugin.authority.store",
-                                                                                 false));
             boolean storeIDs = config.getBooleanProperty(configurationPrefix + ".storeIDs", false);
             suggestHierarchy = config.getBooleanProperty(configurationPrefix + ".hierarchy.suggest", suggestHierarchy);
             preloadLevel = config.getIntProperty(configurationPrefix + ".hierarchy.preloadLevel", preloadLevel);
@@ -151,7 +147,7 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
             String filename = vocabulariesPath + vocabularyName + ".xml";
             if (StringUtils.isNotEmpty(locale)) {
                 String localizedFilename = vocabulariesPath + vocabularyName + "_" + locale + ".xml";
-                if (Paths.get(localizedFilename).toFile().exists()) {
+                if (Path.of(localizedFilename).toFile().exists()) {
                     filename = localizedFilename;
                 }
             }
@@ -188,7 +184,7 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
         String[] textHierarchy = text.split(hierarchyDelimiter, -1);
         StringBuilder xpathExpressionBuilder = new StringBuilder();
         for (int i = 0; i < textHierarchy.length; i++) {
-            xpathExpressionBuilder.append(String.format(xpathTemplate, "$var" + i));
+            xpathExpressionBuilder.append(xpathTemplate.formatted("$var" + i));
         }
         String xpathExpression = xpathExpressionBuilder.toString();
         XPath xpath = XPathFactory.newInstance().newXPath();
@@ -221,7 +217,7 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
         String[] textHierarchy = text.split(hierarchyDelimiter, -1);
         StringBuilder xpathExpressionBuilder = new StringBuilder();
         for (int i = 0; i < textHierarchy.length; i++) {
-            xpathExpressionBuilder.append(String.format(valueTemplate, "$var" + i));
+            xpathExpressionBuilder.append(valueTemplate.formatted("$var" + i));
         }
         String xpathExpression = xpathExpressionBuilder.toString();
         XPath xpath = XPathFactory.newInstance().newXPath();
@@ -256,15 +252,9 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
 
     @Override
     public Choice getChoice(String authKey, String locale) {
-        //FIXME hack to deal with an improper use on the angular side of the node id (otherinformation.id) to
-        // build a vocabulary entry details ID
-        if (!StringUtils.startsWith(authKey, vocabularyName)) {
-            authKey = vocabularyName + DSpaceControlledVocabulary.ID_SPLITTER + authKey;
-        }
-        String nodeId = getNodeIdFromAuthorityKey(authKey);
         Node node;
         try {
-            node = getNode(nodeId, locale);
+            node = getNode(authKey, locale);
         } catch (XPathExpressionException e) {
             return null;
         }
@@ -285,19 +275,17 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
     }
 
     @Override
-    public Choices getChoicesByParent(String authorityName, String parentAuthKey, int start, int limit, String locale) {
+    public Choices getChoicesByParent(String authorityName, String parentId, int start, int limit, String locale) {
         init(locale);
-        String parentId = getNodeIdFromAuthorityKey(parentAuthKey);
-        String xpathExpression = String.format(idTemplateQuoted, parentId);
+        String xpathExpression = idTemplateQuoted.formatted(parentId);
         return getChoicesByXpath(xpathExpression, start, limit);
     }
 
     @Override
-    public Choice getParentChoice(String authorityName, String childAuthKey, String locale) {
+    public Choice getParentChoice(String authorityName, String childId, String locale) {
         init(locale);
         try {
-            String childId = getNodeIdFromAuthorityKey(childAuthKey);
-            String xpathExpression = String.format(idParentTemplate, childId);
+            String xpathExpression = idParentTemplate.formatted(childId);
             Choice choice = createChoiceFromNode(getNodeFromXPath(xpathExpression));
             return choice;
         } catch (XPathExpressionException e) {
@@ -312,23 +300,13 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
         return preloadLevel;
     }
 
-    private String getNodeIdFromAuthorityKey(String authKey) {
-        if (StringUtils.isNotBlank(authKey)) {
-            String[] split = authKey.split(ID_SPLITTER, 2);
-            if (split.length == 2) {
-                return split[1];
-            }
-        }
-        return authKey;
-    }
-
     private boolean isRootElement(Node node) {
         return node != null && node.getOwnerDocument().getDocumentElement().equals(node);
     }
 
     private Node getNode(String key, String locale) throws XPathExpressionException {
         init(locale);
-        String xpathExpression = String.format(idTemplateQuoted, key);
+        String xpathExpression = idTemplateQuoted.formatted(key);
         Node node = getNodeFromXPath(xpathExpression);
         return node;
     }
@@ -350,8 +328,7 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
             }
             Node node = results.item(i);
             Choice choice = new Choice(getAuthority(node), getLabel(node), getValue(node),
-                                       isSelectable(node));
-            choice.authorityName = this.vocabularyName;
+                    isSelectable(node));
             choice.extras = addOtherInformation(getParent(node), getNote(node), getChildren(node), getAuthority(node));
             choices.add(choice);
         }
@@ -378,15 +355,14 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
 
     private String getNodeValue(String key, String locale, boolean useHierarchy) {
         try {
-            String nodeId = getNodeIdFromAuthorityKey(key);
-            Node node = getNode(nodeId, locale);
+            Node node = getNode(key, locale);
             if (Objects.isNull(node)) {
                 return null;
             }
             if (useHierarchy) {
                 return this.buildString(node);
             } else {
-                return node.getAttributes().getNamedItem(labelAttribute).getNodeValue();
+                return node.getAttributes().getNamedItem(valueAttribute).getNodeValue();
             }
         } catch (XPathExpressionException e) {
             return ("");
@@ -469,15 +445,6 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
     private String getAuthority(Node node) {
         Node idAttr = node.getAttributes().getNamedItem("id");
         if (null != idAttr) { // 'id' is optional
-            return getPluginInstanceName() + ID_SPLITTER + idAttr.getNodeValue();
-        } else {
-            return null;
-        }
-    }
-
-    private String getNodeId(Node node) {
-        Node idAttr = node.getAttributes().getNamedItem("id");
-        if (null != idAttr) { // 'id' is optional
             return idAttr.getNodeValue();
         } else {
             return null;
@@ -517,13 +484,9 @@ public class DSpaceControlledVocabulary extends SelfNamedPlugin implements Hiera
 
     private Choice createChoiceFromNode(Node node) {
         if (node != null && !isRootElement(node)) {
-            Choice choice = new Choice(
-                getAuthority(node),
-                getLabel(node),
-                getValue(node),
+            Choice choice = new Choice(getAuthority(node), getLabel(node), getValue(node),
                     isSelectable(node));
-            choice.authorityName = this.vocabularyName;
-            choice.extras = addOtherInformation(getParent(node), getNote(node), getChildren(node), getNodeId(node));
+            choice.extras = addOtherInformation(getParent(node), getNote(node),getChildren(node), getAuthority(node));
             return choice;
         }
         return null;
